--- a/Index.html
+++ b/Index.html
@@ -148,6 +148,7 @@
             <!-- <div class="Dinner"></div> -->
         </div>
     </main>
+    <section class="parent_box_rev">
     <section class="reviews">
         <div class="review"> 
         <div class="review-overlay">
@@ -178,5 +179,6 @@
             <img src="./images/testimonials/testimonials-4.jpg" alt="review" width="50%">
         </div>
     </section>
+</section>
 </body>
 </html>
