--- a/Index.html
+++ b/Index.html
@@ -417,5 +417,136 @@
             </div>
         </div>
     </section>
+    <section class="gallery" id="gallery">
+        <p>Gallery</p>
+        <h1>Checkout Our Gallery</h1>
+        <div class="contain_gallery">
+            <div class="gallery_img">
+                <img src="./images/gallery/gallery-1.jpg" alt="gallery" width="100%">
+            </div>
+            <div class="gallery_img">
+                <img src="./images/gallery/gallery-2.jpg" alt="gallery" width="100%">
+            </div>
+            <div class="gallery_img">
+                <img src="./images/gallery/gallery-3.jpg" alt="gallery" width="100%">
+            </div>
+            <div class="gallery_img">
+                <img src="./images/gallery/gallery-4.jpg" alt="gallery" width="100%">
+            </div>
+            <div class="gallery_img">
+                <img src="./images/gallery/gallery-5.jpg" alt="gallery" width="100%">
+            </div>
+            <div class="gallery_img">
+                <img src="./images/gallery/gallery-6.jpg" alt="gallery" width="100%">
+            </div>
+            <div class="gallery_img">
+                <img src="./images/gallery/gallery-7.jpg" alt="gallery" width="100%">
+            </div>
+            <div class="gallery_img">
+                <img src="./images/gallery/gallery-8.jpg" alt="gallery" width="100%">
+            </div>
+        </div>
+        <div class="gallery_btn">
+            <ul>
+                <li><a href="#gallery">○</a></li>
+                <li><a href="#gallery">○</a></li>
+                <li><a href="#gallery">○</a></li>
+                <li><a href="#gallery">○</a></li>
+            </ul>
+        </div>
+    </section>
+    <section class="Contact_us">
+        <p>Contact Us</p>
+        <h1>Need Help Finding Us!</h1>
+        <div class="contain_contact">
+            <div class="location">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15560.286395171914!2d77.6454937871582!3d12.8386498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae6d6ab07d151b%3A0xc0af49ccfc84871a!2sScaler%20School%20Of%20Technology%20Macro%20Campus!5e0!3m2!1sen!2sin!4v1701593719929!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="contact" style="display: flex;">
+                <div class="Addrs" style="display: flex;">
+                    <div class="img_ran">
+                    <img src="./images/play.png" alt="contact" width="100%">
+                    </div>
+                    <div class="txt_con">
+                    <h1>Address</h1>
+                    <p>500 Lorem Ipsum Dolor Sit, 22-56-2-9 Sit Amet, Lorem,</p>
+                    </div>
+                </div>
+                <div class="Addrs" style="display: flex;">
+                    <div class="img_ran">
+                    <img src="./images/play.png" alt="contact" width="100%">
+                    </div>
+                    <div class="txt_con">
+                    <h1>Email</h1>
+                    <p>xyzlorem@ipsum.com</p>
+                    </div>
+                </div>
+            </div>
+            <div class="contact" style="display: flex;">
+                <div class="Addrs" style="display: flex;">
+                    <div class="img_ran">
+                    <img src="./images/play.png" alt="contact" width="100%">
+                    </div>
+                    <div class="txt_con">
+                    <h1>Address</h1>
+                    <p>500 Lorem Ipsum Dolor Sit, 22-56-2-9 Sit Amet, Lorem,</p>
+                    </div>
+                </div>
+                <div class="Addrs" style="display: flex;">
+                    <div class="img_ran">
+                    <img src="./images/play.png" alt="contact" width="100%">
+                    </div>
+                    <div class="txt_con">
+                    <h1>Email</h1>
+                    <p>xyzlorem@ipsum.com</p>
+                    </div>
+                </div>
+            </div>
+            <div class="cont_form">
+                <form action="index.html" method="post">
+                    <div class="row1">
+                        <input type="text" name="name" placeholder="Your Name" required>
+                        <input type="number" name="phone" placeholder="Your Phone" required>
+                    </div>
+                        <input type="text" name="guest" placeholder="SUbject" required>
+                    <textarea name="message" placeholder="Message" required></textarea>
+                    <button>Book Now</button>
+                </form>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="sec1">
+            <div class="Address css">
+                <h1>Address</h1>
+                <p>500 Lorem Ipsum Dolor Sit,</p>
+                <p>22-56-2-9 Sit Amet, Lorem,</p>
+                <p>USA</p>
+            </div>
+            <div class="reservat css">
+                <h1>Reservation</h1>
+                <p>Phone: +1 5589 55488 55</p>
+                <p>Email:infor@xyz.com</p>
+            </div>
+            <div class="openinghours css">
+                <h1>Opening Hours</h1>
+                <p>Mon - Fri: 7am - 10pm</p>
+                <p>Sat: 8am - 10pm</p>
+                <p>Sun: 8am - 11pm</p>
+            </div>
+            <div class="followus css">
+                <h1>Follow Us</h1>
+                <div class="social">
+                    <img src="./images/facebook.png" alt="facebook" width="30px">
+                    <img src="./images/instagram.png" alt="instagram" width="30px">
+                    <img src="./images/twitter.png" alt="twitter" width="30px">
+                    <img src="./images/youtube.png" alt="youtube" width="30px">
+                </div>
+            </div>
+        </div>
+        <div class="sec2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+        </div>
+    </footer>
 </body>
 </html>
