--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
                 <li><a href="#our_menu">Menu</a></li>
                 <li><a href="#Event_page">Events</a></li>
                 <li><a href="#chefs">Chefs</a></li>
-                <li><a href="index.html">Gallery</a></li>
+                <li><a href="#gallery">Gallery</a></li>
                 <li><select> 
                     <option value="en">Drop Down</option>
                     <option value="en"><a href="Index.html">Home</a></option>
