--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
                     <option value="es"><a href="Index.html">Gallery</a></option>
                 </select>
                 </li>
-                <li><a href="index.html">Contact</a></li>
+                <li><a href="#Contact_us">Contact</a></li>
             </ul>
         </nav>
         <button class="book">Book a table</button>
@@ -455,7 +455,7 @@
             </ul>
         </div>
     </section>
-    <section class="Contact_us">
+    <section class="Contact_us" id="Contact_us">
         <p>Contact Us</p>
         <h1>Need Help Finding Us!</h1>
         <div class="contain_contact">
